--- a/package.json
+++ b/package.json
@@ -1,70 +1,21 @@
 {
-  "name": "@bsv/registry-services",
+  "name": "@bsv/identity-services",
+  "private": true,
   "version": "1.0.0",
-  "type": "module",
-  "description": "Registry Overlay Services",
-  "main": "dist/cjs/mod.js",
-  "module": "dist/esm/mod.js",
-  "types": "dist/types/mod.d.ts",
-  "files": [
-    "dist",
-    "src",
-    "docs",
-    "mod.ts",
-    "LICENSE.txt"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/types/mod.d.ts",
-      "import": "./dist/esm/mod.js",
-      "require": "./dist/cjs/mod.js"
-    },
-    "./*.ts": {
-      "types": "./dist/types/src/*.d.ts",
-      "import": "./dist/esm/src/*.js",
-      "require": "./dist/cjs/src/*.js"
-    }
-  },
+  "description": "Standard BSV project structure",
   "scripts": {
-    "test": "npm run build && jest",
-    "test:watch": "npm run build && jest --watch",
-    "test:coverage": "npm run build && jest --coverage",
-    "lint": "ts-standard --fix src/**/*.ts",
-    "build": "tsc -b && tsconfig-to-dual-package tsconfig.cjs.json",
-    "dev": "tsc -b -w",
-    "prepublish": "npm run build",
-    "doc": "ts2md --inputFilename=mod.ts --outputFilename=API.md --filenameSubstring=API --firstHeadingLevel=1"
+    "lars": "lars",
+    "cars": "cars",
+    "lars:config": "lars config",
+    "start": "lars start",
+    "build": "cars build 1",
+    "deploy": "cars deploy now 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bitcoin-sv/registry-services.git"
-  },
-  "keywords": [
-    "BSV",
-    "Blockchain",
-    "Overlay",
-    "Bitcoin",
-    "SV"
-  ],
-  "author": "BSV Association",
+  "keywords": [],
+  "author": "",
   "license": "SEE LICENSE IN LICENSE.txt",
-  "bugs": {
-    "url": "https://github.com/bitcoin-sv/registry-services/issues"
-  },
-  "homepage": "https://github.com/bitcoin-sv/registry-services#readme",
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-standard": "^12.0.2",
-    "ts2md": "^0.2.0",
-    "tsconfig-to-dual-package": "^1.2.0",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "@bsv/overlay": "^0.1.24",
-    "@bsv/sdk": "^1.4.0",
-    "@bsv/wallet-toolbox-client": "^1.2.2",
-    "mongodb": "^6.11.0"
+    "@bsv/cars-cli": "^1.1.4",
+    "@bsv/lars": "^1.3.0"
   }
 }
