--- a/backend/tsconfig.esm.json
+++ b/backend/tsconfig.esm.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": "./",
     "baseUrl": "./",
-    "outDir": "./dist/esm",
+    "outDir": "build/esm",
     "allowSyntheticDefaultImports": true
   }
 }
